--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="arc">
+                <span class="oi oi-eye" aria-hidden="true"></span> Arc Slider Demo
+            </NavLink>
+        </li>
     </ul>
 </div>
 
