--- a/Pages/Analyse.razor
+++ b/Pages/Analyse.razor
@@ -10,7 +10,7 @@
         <RadzenProgressBar Value="@progress" Unit="@info" Visible="@(progress>0)" Style="margin-bottom:20px;" />
     </div>
     <div class="col">
-        <RadzenButton Click="OnAnalyse" Text="Anaylise" Style="margin-bottom: 20px; width: 150px" />
+        <RadzenButton Click="OnAnalyse" Text="Analyse" Style="margin-bottom: 20px; width: 150px" Disabled="@DisableAnaylse" />
     </div> 
 </div>
 
